
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int HIGH ;
 int LOW ;
 int MEDIUM ;

int speed_idx_cca(int req_type)
{
 switch (req_type) {
 case 0x4142:
 case 0x4149:
 case 0x414D:
 case 0x4341:
 case 0x4344:
 case 0x4354:
 case 0x4358:
 case 0x444B:
 case 0x4558:
 case 0x4643:
 case 0x4651:
 case 0x4C47:
 case 0x4C4B:
 case 0x4C51:
 case 0x4F48:
 case 0x504F:
 case 0x5053:
 case 0x5058:
 case 0x5343:
 case 0x5344:
 case 0x5345:
 case 0x5350:
  return LOW;
 case 0x414B:
 case 0x4345:
 case 0x4349:
 case 0x434D:
 case 0x4847:
 case 0x4849:
 case 0x484D:
 case 0x4850:
 case 0x4851:
 case 0x4954:
 case 0x4958:
 case 0x4B43:
 case 0x4B44:
 case 0x4B45:
 case 0x4B47:
 case 0x4B48:
 case 0x4B49:
 case 0x4B4E:
 case 0x4B50:
 case 0x4B52:
 case 0x4B54:
 case 0x4B58:
 case 0x4D50:
 case 0x4D53:
 case 0x4D56:
 case 0x4D58:
 case 0x5044:
 case 0x5045:
 case 0x5046:
 case 0x5047:
 case 0x5049:
 case 0x504B:
 case 0x504D:
 case 0x5254:
 case 0x5347:
 case 0x5349:
 case 0x534B:
 case 0x534D:
 case 0x5356:
 case 0x5358:
 case 0x5443:
 case 0x544B:
 case 0x5647:
  return HIGH;
 default:
  return MEDIUM;
 }
}
